solvaTask/src/main/kotlin/com/example/solvatask/error/dto/InvalidData.kt
package com.example.solvatask.error.dto

class InvalidData : RuntimeException()
